Updated readme with build-guide.