@@ -25,7 +25,8 @@ we come back to existing (old) technology for the matching services:
 - triplestore(virtuoso)   -> http://virtuoso.openlinksw.com/
 - solr                    -> http://lucene.apache.org/solr/
 - ldspider                -> https://code.google.com/p/ldspider/
-__________________________________________________________________________________________
+
+---
 
 won-node
 - all needs and offers will be saved there
@@ -38,3 +39,34 @@ matching-service
 
 
 See also: http://events.linkeddata.org/ldow2013/papers/ldow2013-paper-13.pdf
+
+# Building with IntelliJ
+
+1. Conf-Folder
+    1. Copy the `conf` folder to `conf.local`
+    1. Adapt the properties files to your setup
+1. Make sure you have the following external dependencies installed:
+    * Maven 3.0.5 (+configured in your IntelliJ). 
+    * Tomcat 7.0.57 (+configured in your IntelliJ). 
+    * For the owner-app (a more detailed guide can be found [here](https://www.jetbrains.com/idea/help/using-gulp-task-runner.html#d588211e148))
+        * Node.js (should be in your $PATH)
+        * Bower (should be in your $PATH)
+        * Git (should be in your $PATH)
+        * Nodejs-plugin for IntelliJ 
+1. Import into IntelliJ via the Maven task
+1. Create Gulp-configuration according to: <https://www.jetbrains.com/idea/help/using-gulp-task-runner.html#d588211e148>, pointing to the owner-app's gulpfile.js
+1. Create tomcat-configurations, e.g.:
+    * After-launch: `http://localhost:8080/won/`
+    * VM-Options: `-XX:MaxPermSize=250m -Dlogback.configurationFile=C:\WoN\webofneeds\webofneeds\conf.local\logback.xml -DWON_CONFIG_DIR=C:\WoN\webofneeds\webofneeds\conf.local -Dsolr.solr.home=C:\WoN\webofneeds\webofneeds\won-matcher-solr\target\won-matcher-solr-0.1-SNAPSHOT\siren\solr`
+    * HTTP port: 8080
+    * JMX port: 1099
+    * Deployment
+        * `won-node-webapp:war exploded` as `/won`
+        * `won-owner-webapp:war exploded` as `/owner`
+        * `apache-solr-3.5.0.war` as `/siren`
+1. Make your tomcat deploy-configuration depend on the gulp configuration (don't forget to insert it *before* the packing of the `.war`-files)
+
+Sadly there doesn't seem to be a way to run the gulp configuration when just reloading resources. During development you either need to run gulp manually (there's a handy `watch`-task in gulp) or restart the server every time to see the changes in the scss.
+
+A major build speedup can be achieved by running the maven install task with the `copy-*-dependencies` options enabled and then copying the war files from the most generic `target`-folder to `$TOMCAT/shared/lib` and afterwards always using the `skip-dependencies` option for maven install.
+
